sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: value sw is not a member of Unit
 			echange(i,i+1) 	sw=true		} 
                                        ^